fix sub list spacing

--- a/style.css
+++ b/style.css
@@ -125,11 +125,9 @@ a {
   margin-bottom: 0;
 }
 
-ul>li>ul,
-ul>li>ol,
-ol>li>ul,
-ol>li>ol {
-  margin-top: 0.5cap;
+li>ul,
+li>ol {
+  margin-top: 0.5cap !important;
 }
 
 li {
